# canopy

./: .gitignore  Cargo.toml  METHODS.md  README.md  flake.nix  justfile  methods.md
examples/: README.md  pig.rs
examples/catan/: CDP.md  OPTIMIZATIONS.md  README.md  encoder.rs  heuristic.rs  inspect_board.py  main.rs  model.rs  presenter.rs  visualize.rs  visualize_template.html
examples/catan/colonist/: NOTES.md  board.rs  check_log.py  debug_topology.py  log.rs  mod.rs  state.rs  tabulate_resources.py
examples/catan/encoder/: basic.rs  gnn.rs  gnn2.rs  mod.rs  nexus.rs  nexus_v1.rs  nexus_v2.rs  nexus_v3.rs  rich_node.rs  table.md
examples/catan/game/: action.rs  board.rs  dev_card.rs  dice.rs  hex.rs  mod.rs  resource.rs  road.rs  state.rs  topology.rs
examples/catan/model/: gnn.rs  mod.rs  nexus.rs  nexus_v1.rs  nexus_v2.rs  nexus_v3.rs  resnet.rs  simple.rs
examples/catan/scripts/: explore_dev_cards.py  poll_state.py  probe_buttons.py
examples/catan/web/: app.js  board.js  controls.js  index.html  mcts.js  session.js  style.css
examples/pig/: encoder.rs  game.rs  main.rs  model.rs  strategy.rs
examples/tenure/: encoder.rs  game.rs  main.rs  model.rs  round_robin.rs  strategy.rs  visualize.rs  visualize_template.html
examples/twenty48/: encoder.rs  game.rs  main.rs  model.rs
experiments/: commutativity.md  dice-bucket.md  lazy-chance.md  transpositions.md
notes/: architecture.md  catan-strategy.md  ideas.md  methods.md  strategy-doc.md  training-config.md
papers/: janestreet.md  minigo.md  paper.md
scripts/: cdp_devcard_keys.py
src/: cli.rs  dirichlet.rs  eval.rs  game.rs  game_log.rs  graph.rs  lib.rs  logging.rs  mcts.rs  nn.rs  orchestrator.rs  player.rs  tournament.rs  train.rs  utils.rs
src/mcts/: README.md  mod.rs  seq_halving.rs  tree.rs
src/server/: mod.rs  protocol.rs  session.rs  traits.rs
src/train/: README.md  benchmark.rs  burn_backend.rs  checkpoint.rs  config.rs  game.rs  inference.rs  metrics.rs  mod.rs  replay_buffer.rs  self_play.rs
