[package]
name = "canopy2"
version = "0.1.0"
edition = "2024"

[lib]
name = "canopy2"
path = "src/lib.rs"

[features]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "string"], optional = true }
fastrand = "2"
indicatif = "0.17"

[dev-dependencies]
canopy2 = { path = ".", features = ["cli"] }

[[example]]
name = "pig"
path = "examples/pig.rs"

[[example]]
name = "catan"
path = "examples/catan/main.rs"
