[package]
name = "canopy2"
version = "0.1.0"
edition = "2024"

[lib]
name = "canopy2"
path = "src/lib.rs"

[features]
cli = ["dep:clap"]
visualize = ["dep:serde", "dep:serde_json"]
nn = ["dep:burn", "dep:csv", "dep:serde", "dep:serde_json", "dep:tokio"]
cuda = ["nn", "burn/cuda"]
wgpu = ["nn", "burn/wgpu"]

[dependencies]
burn = { version = "0.20", default-features = false, features = ["std", "ndarray", "autodiff"], optional = true }
clap = { version = "4", default-features = false, features = ["std", "string"], optional = true }
csv = { version = "1", optional = true }
fastrand = "2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

[dev-dependencies]
canopy2 = { path = ".", features = ["cli", "visualize", "nn"] }

[[example]]
name = "pig"
path = "examples/pig.rs"

[[example]]
name = "catan"
path = "examples/catan/main.rs"
